--- a/ChallengesAndResults/ChallengesAndResults/wwwroot/index.html
+++ b/ChallengesAndResults/ChallengesAndResults/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -12,5 +12,37 @@
     <app>Loading...</app>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>
+        function arrayBufferToBase64(buff) {
+            var alph = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/",
+                enc = "",
+                n, p, bits;
+            d = new Uint8Array(buff);
+            var len = buff.byteLength * 8;
+            for (var offset = 0; offset < len; offset += 6) {
+                n = (offset / 8) | 0;
+                p = offset % 8;
+                bits = ((d[n] || 0) << p) >> 2;
+                if (p > 2) { bits |= (d[n + 1] || 0) >> (10 - p) }
+                enc += alph.charAt(bits & 63);
+            }
+            enc += (p == 4) ? '=' : (p == 6) ? '==' : '';
+            return enc;
+        }
+        function handleFileSelect(files) {
+            var file = files[0];
+            var reader = new FileReader();
+
+            reader.onloadend = function (evt) {
+                if (evt.target.readyState == FileReader.DONE) { // DONE == 2
+                    let messageAsDotNetString = arrayBufferToBase64(evt.target.result);
+                    console.log(messageAsDotNetString);
+                    DotNet.invokeMethod("ChallengesAndResults", "Upload", messageAsDotNetString);
+               }
+            };
+            var blob = file.slice(0, file.size);
+            reader.readAsArrayBuffer(blob);
+        }
+    </script>
 </body>
 </html>
